fixed poll overlapping

--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -43,7 +43,6 @@
 
 #group-view-container {
   width: 65vw;
-  height: 100vh;
   margin: 0 auto;
 }
 
